tests/invalid/sanity/array_key_not_defined.php
<?php

$data = [];

echo $data['missing'];

